fixed spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -203,7 +203,7 @@ td, th {
 }
 
 .section2 {
-  width: 130%;
+  width: 110%;
   height: 225px;
   margin: 10px auto;
   background: transparent;
